tests/build/cases/widget_new/no_default_when_assigned1.stderr
error: property `my_property` is not assigned and has no default value
  --> $DIR/no_default_when_assigned1.rs:14:13
   |
14 |             my_property = 20
   |             ^^^^^^^^^^^
